tests/reference/run-array_size_01_cc-9335a32.stderr
semantic error: Incorrect number of arguments passed to the 'size' intrinsic. It accepts at least 1 and at most 3 arguments.
 --> tests/errors/array_size_01_cc.f90:5:14
  |
5 |     size_a = size(a, 1, 4, kind=4)
  |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'size' intrinsic. It accepts at least 1 and at most 3 arguments.
 --> tests/errors/array_size_01_cc.f90:6:14
  |
6 |     size_a = size()
  |              ^^^^^^ 
